# flightpath-microservice-example

./: Cargo.toml  README.md  work-documentation.md
api-example/: load-test.sh  sample-call.sh
src/: handler.rs  logic.rs  main.rs  model.rs
