[package]
name = "flightpath-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_derive = "1.0.145"                  # Macros 1.1 implementation of #[derive(Serialize, Deserialize)]
log = "0.4.17"                  # A lightweight logging facade for Rust
